Fix browser actions drop indicator color

When browser actions are dragged and dropped inside the menu,
they used to use the menu's widget theme provider which is of
type ui::DefaultThemeProvider. Instead, it should use the browser's
frame theme provider, so it can get the correct color.

BUG=831510

Change-Id: If7f46e38e44bbfee04b6f67e8377b7d8dd3d9d7f
Reviewed-on: https://chromium-review.googlesource.com/1011374
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550730}
Former-commit-id: 80485cd5d06d8b6b28a2dfd007ee6f26a5132dfb